docs_ignore_h = [
    'xed-close-button.h',
    'xed-close-confirmation-dialog.h',
    'xed-dirs.h',
    'xed-document-private.h',
    'xed-documents-panel.h',
    'xed-encodings-dialog.h',
    'xed-highlight-mode-dialog.h',
    'xed-highlight-mode-selector.h',
    'xed-history-entry.h',
    'xed-io-error-info-bar.h',
    'xed-metadata-manager.h',
    'xed-paned.h',
    'xed-plugins-engine.h',
    'xed-preferences-dialog.h',
    'xed-print-job.h',
    'xed-print-preview.h',
    'xed-settings.h',
    'xed-status-menu-button.h',
    'xed-tab-label.h',
    'xed-ui.h',
    'xed-view-frame.h',
    'xed-view-gutter-renderer.h',
    'xed-window-private.h',
    'xed-marshal.h',
    'xed-enum-types.h'
]

gnome.gtkdoc(
    'xed',
    mode: 'xml',
    install: true,
    main_xml: 'xed-docs.xml',
    gobject_typesfile: 'xed.types',
    src_dir: [
        join_paths(meson.source_root(), 'xed'),
        join_paths(meson.build_root(), 'xed'),
    ],
    ignore_headers: docs_ignore_h,
    dependencies: libxed_dep,
    scan_args: ['--rebuild-types'],
    mkdb_args: ['--xml-mode', '--output-format=xml'],
)
